@@ -287,6 +287,8 @@ sub xst_replace_ini
   my $pre_space, $post_comment, $sec_save;
   my $line_key, $val;
 
+  print STDERR "\nreplace_ini: ". join (',', @_). "\n";
+
   $buff = &xst_buffer_load ($file);
 
   &xst_buffer_join_lines ($buff);
@@ -335,11 +337,8 @@ sub xst_replace_ini
     last if $found_flag == 2;
   }
 
-  if (!$found_flag)
-  {
-    push @$buff, "\n[$section]\n";
-    push @$buff, "$var = $value\n";
-  }
+  push @$buff, "\n[$section]\n" if (!$found_flag);
+  push @$buff, "$var = $value\n" if ($found_flag < 2);
   
   &xst_buffer_clean ($buff);
   return &xst_buffer_save ($buff, $file);
